--- a/index.css
+++ b/index.css
@@ -346,10 +346,12 @@ STRONA 1 – CSS / dałem znacznie mniejsze padingi na mobilki
 @media (max-width: 768px){
   main{
   margin: 0 auto;
-  margin-left: 3vw;
-  margin-right: 3vw;
+  margin-left: 3vw !important;
+  margin-right: 3vw !important;
   }
 }
+
+
 
 /* ==========================================
 STRONA 1 – CSS / NAGŁÓWEK
@@ -363,7 +365,6 @@ background-attachment: fixed;
 color:white;
 height: 100svh;
 width: 100%;
-box-shadow: 0px 0px 15px black;
 }
 @media (max-width: 768px){
 .naglowek{
@@ -406,8 +407,6 @@ STRONA 1 – CSS /SEKCJIA DLCZEGO LEWA
   flex: 1 1 60%;
   min-width: 940px;
   height: fit-content;
-background-image: 
-linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0));
 background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -442,9 +441,9 @@ text-align: right;
 /*  NAGŁÓWEK  */
 .heder2{
 font-size: 75px;
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-family: Montserrat, sans-serif !important;
 font-weight: 700;
-margin-bottom: 30px;
+margin-bottom: 10px;
 padding: 2%;
 color: var(--text);
 }
@@ -455,7 +454,6 @@ color: #f5f5f5;
 @media (max-width: 768px){
   .heder2{
   font-size: 35px;
-  margin-bottom: 30px;
   }
 }
 
@@ -476,10 +474,21 @@ text-align: right;
 }
 /*  pomoc - [lewa]  */
 .p{
+  color: #656565;
   width: 100%;
   font-size: 22px;
   padding: 2%;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+    font-family: Helvetica, Arial, 'Microsoft Yahei', sans-serif;
+        line-height: 1.8;
+          letter-spacing: 0.5px;
+}
+
+.p-nd{
+    color: var(--oliwka);
+      font-size: 27px;
+    font-style: oblique;
+    padding: 2%;
 }
 .ramka{
 border: solid 1px;
@@ -561,7 +570,7 @@ background-color: #f5f5f5;
 text-align: center;
 align-content: center;
 transition: background-color 0.6s ease, color 0.6s ease;
-color:#d24d00;
+color: var(--oliwka);
 } 
 body.dark-theme .button-wiecej{
   background-color: #000000;
@@ -675,30 +684,26 @@ h2{
 font-size: clamp(1rem, 13vw, 12rem);
 text-align: left;
 padding-left: 5vw;
-text-shadow: 0 8px 24px rgba(0, 0, 0, 0.35);
-font-family: "Yeseva One", serif;
-
-font-weight: 400;
-color: #000000;
+font-family: Montserrat, sans-serif !important;
+font-weight: 900;
+color: #3b3b3b;
 font-style: normal;
 }
 body.dark-theme h2{
-  color: white;
+  color: rgb(157, 157, 157);
 }
 h1{
 line-height: 1;
 font-size: clamp(1rem, 13vw, 12rem);
 text-align: left;
 padding-left: 5vw;
-text-shadow: 0 8px 24px rgba(0, 0, 0, 0.35);
-font-family: "Yeseva One", serif;
 max-width: 14ch;
-font-weight: 400;
-color: #000000;
+font-family: Montserrat, sans-serif !important;
+font-weight: 900;
 font-style: normal;
+color: #6B705C;
 }
 body.dark-theme h1{
-  color: rgb(255, 255, 255);
 }
 body.dark-theme h3{
   color: rgb(255, 255, 255);
@@ -709,7 +714,7 @@ h2::after{
   bottom: 1;
   height: 3px;
   width: 50%;             /* start od 0 */
-  background-color:#ff5e00; /* przesunięcie środka pod tekst */   /* linia rośnie od środka */
+  background-color:var(--oliwka); /* przesunięcie środka pod tekst */   /* linia rośnie od środka */
     margin-top: 2px; 
     margin-left: -50%;
 }
@@ -748,10 +753,6 @@ h3{
   text-align: left;
   padding-left: 5vw;
   padding-top: 2vh;
-  text-shadow: 0 8px 24px rgba(0, 0, 0, 0.35);
-  font-family: "Yeseva One", serif;
-  font-weight: 400;
-  font-style: normal;
   }
 }
 
@@ -1279,6 +1280,13 @@ button {
   flex-wrap: wrap;
 }
 
+@media (max-width: 768px) {
+.edukacjia{
+
+  padding: 0;
+
+}
+}
 body.dark-theme .edukacjia-header{
   background-color: #000000;
   color: white;
@@ -1339,9 +1347,7 @@ color: var(--text);
 }
 
 .ramka2{
-border: solid 1px;
 padding: 2%;
-border-color: #ff5e00;
 background-color: #ffffff00;
 height: 100%;
 justify-content: center;
@@ -1644,13 +1650,14 @@ justify-content: space-between;
   --przezroczyste-nav: #ffffff00;
   --bg: #ffffff;
   --bg-secondary: #f5f5f5;
-  --text: #000000;
+  --text: #272727;
   --text-secondary: #575757;
   --accent: #ff5e00;
   --nav-bg: rgb(255, 255, 255);
   --card-bg: #ffffff;
   --modal-bg: #ffffff;
   --x-menu:  rgba(235, 235, 235, 0.82);
+  --oliwka:  #6B705C;
 }
 
 body.dark-theme {
@@ -1665,3 +1672,4 @@ body.dark-theme {
   --modal-bg: rgba(0,0,0,0.9);    
   --x-menu:  rgba(33, 33, 33, 0.82);
 }
+
