--- a/index.css
+++ b/index.css
@@ -113,8 +113,8 @@ li:hover .lista {
   list-style-type: none;
 
     text-decoration: none;
-    display: block;
-    color: #ff5e00;
+  color: #bfff00;
+  background-color: #00000063;
 }
 /* ==========================================
 STRONA OGULNE – CSS / NAWIGACJA MENU z x ponizej 768 (telefony tablety)
@@ -215,6 +215,7 @@ zmniejszenie paska navigacji przy scrollowaniu patrz js
 ========================================== */
 
 .ulul{
+
 display: flex;
 color: var(--text);
 align-items: center;
@@ -234,16 +235,19 @@ flex-wrap: nowrap;
 text-decoration: none;
 cursor: pointer;
 color: rgb(0, 0, 0);
-transition: color 0.9s ease, border-bottom-color 0.9s ease; /* to daje ładniejsze przejscia*/
+background-color: #0000001b;
+transition:0.3s;
 }
 body.dark-theme .a0{
   color: white;
 }
 .a0:hover{
   width: 100%; 
-  color: #89916d;
+  color: #bfff00;
+  background-color: #00000063;
 }
 .a0.active{
+  background-color: #bae047;
   width: 100%; 
   color: var(--oliwka)
 }
@@ -269,7 +273,7 @@ font-style: normal;
   bottom: 0;
   height: 3px;
   width: 0;             /* start od 0 */
-  background-color: #000000;
+  background-color: #191919;
   transform: translateX(-50%);  /* przesunięcie środka pod tekst */
   transform-origin: center;     /* linia rośnie od środka */
   transition: width 0.3s;
@@ -309,7 +313,6 @@ wersja 1
 ========= */
 .dolacz-do-nas{
   padding: 3%;
-
 list-style-type: none;
 border-style: solid;
 border-width: 1.0px;
@@ -323,8 +326,9 @@ color: var(--text);
 
 
 .dolacz-do-nas:hover{
-border: 0.1px solid var(--accent);
-color: var(--accent);
+border-color: #bfff00;
+background-color: #0000003d;
+color: #bfff00;
 }
 
 
@@ -353,6 +357,7 @@ STRONA 1 – CSS / dałem znacznie mniejsze padingi na mobilki
 STRONA 1 – CSS / NAGŁÓWEK
 ========================================== */
 .naglowek{
+background-image: url(/Users/dawid/Desktop/Github/zd_daw/naj-gal-2-copa.jpg);
 position: relative;
 z-index: 1; 
 background-repeat: no-repeat;
@@ -364,7 +369,7 @@ width: 100%;
 }
 @media (max-width: 768px){
 .naglowek{
-height: 50svh;
+height: 80svh;
 margin-bottom: 5rem;
 
 }
@@ -390,7 +395,6 @@ margin-top: 2vh;
 display: flex;
 flex-wrap: wrap; 
 background-color:#f5f5f5;     /*background-color: #EBD5AB;*/
-box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.211);
 }
 body.dark-theme .section-dlaczego{
 background-color:#f5f5f500; 
@@ -443,6 +447,18 @@ font-weight: 700;
 margin-bottom: 10px;
 padding: 2%;
 color: var(--text);
+}
+
+.heder2::after{
+position: absolute;
+bottom: 0;
+content: "";
+position: absolute;    
+width: 20%;
+right: 0;
+background-color: #9cc328;
+height: 5px;
+
 }
 body.dark-theme .heder2{
 color: #f5f5f5;
@@ -683,13 +699,16 @@ text-align: left;
 padding-left: 5vw;
 font-family: Montserrat, sans-serif !important;
 font-weight: 900;
-color: #3b3b3b;
+color: #313131;
 font-style: normal;
+background-color: #00000036;
 }
 body.dark-theme h2{
   color: rgb(157, 157, 157);
 }
 h1{
+  background-color: #00000064;
+
 line-height: 1;
 font-size: clamp(1rem, 13vw, 12rem);
 text-align: left;
@@ -698,22 +717,23 @@ max-width: 14ch;
 font-family: Montserrat, sans-serif !important;
 font-weight: 900;
 font-style: normal;
-color: #6B705C;
+color: #a5d024;
+/*#d2ff4c #9cc328 6B705C b7e922*/
 }
 body.dark-theme h1{
 }
 body.dark-theme h3{
   color: rgb(255, 255, 255);
 }
-h2::after{
+h3::after{
   content: "";
   position: absolute;           /* start w środku */
   bottom: 1;
   height: 3px;
   width: 50%;             /* start od 0 */
-  background-color:var(--oliwka); /* przesunięcie środka pod tekst */   /* linia rośnie od środka */
-    margin-top: 2px; 
-    margin-left: -50%;
+  background-color: #9cc328; /* przesunięcie środka pod tekst */   /* linia rośnie od środka */
+    margin-bottom: 10%;
+      margin-left: -50%;
 }
 @media (max-width: 768px) {
 h2::after{
@@ -727,12 +747,12 @@ h2::after::after{
   height: 3px;
   width: 50%;             /* start od 0 */
   background-color:#ff5e00; /* przesunięcie środka pod tekst */   /* linia rośnie od środka */
-    margin-top: 10px; 
     margin-left: -50%;
+
 }
 
 h3{
-  padding-top: 15%;
+  padding-top: 5%;
   padding-bottom: 2px;
 font-size: clamp(1rem, 1.7vw, 4rem);
 text-align: left;
@@ -742,6 +762,7 @@ font-family: "Yeseva One", serif;
 font-weight: 400;
 color: #4b4b4b;
 font-style: normal;
+padding-bottom: 10%;
 }
 
 @media (max-width: 768px) {
@@ -780,7 +801,7 @@ STRONA 2 – CSS BANER DOŁACZ DO NAS
   .dolocz-heder{
   width: 80%;
   font-size: 5vw;
-  color: #05220e;
+  color: #bfff00;
   padding-left: 5%;
   padding-top: 50%;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -1189,8 +1210,8 @@ bottom: 0;
 left: 0;
 width: 100%;
 height: 20vh;
-background: #ffffff;
-color: #000000;
+background: #00000095;
+color: #bae047;
 padding: 20px;
 display: flex;
 justify-content: space-between;
@@ -1221,7 +1242,7 @@ PRZYCISKI accept
 .accept{
 width: 20dvw;
 padding: 1%;
-background-color:#063014;
+background-color:#000000c7;
 border-radius: 0.75rem;
 color: white;
 border: solid 1px #ffffff;
@@ -1229,9 +1250,8 @@ font-weight: 750;
 transition: background-color 0.3s ease, color 0.3s ease;
 }
 .accept:hover{
-background-color:#095f25;
-color: white;
-border: solid 1px #ffffff;
+color: #9cc328;
+border: solid 1px #9cc328;;
 }
 
 
@@ -1242,13 +1262,13 @@ PRZYCISKI delete
 width: 20vw;
 font-weight: 750;
 padding: 1%;
-background-color: white;
+background-color:#000000c7;
 border-radius: 0.75rem;
 border: solid 1px #ff0000;
 transition: background-color 0.3s ease, color 0.3s ease;
 }
 .delete:hover{
-background-color: rgb(170, 0, 0);
+background-color: rgba(170, 0, 0, 0.161);
 color: white;
 border-radius: 0.75rem;
 }
@@ -1642,6 +1662,8 @@ justify-content: space-between;
 
 @media (max-width: 768px){
 .ikonki-tylko-tel{
+  margin-top: 22px;
+  color: rgb(239, 255, 192);
   display: flex;
   justify-content: center;
   gap: 21px;
@@ -1652,8 +1674,11 @@ justify-content: space-between;
 }
 
 .pop{
+  padding: 1%;
+  border-radius: 24px;
+    background-color: #000000e0;
   font-family: cursive;
-  font-size:1.5rem;
+  font-size:1rem;
 }
 .obdyp{
   background-color: #616558a4;
