--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ scroll-behavior: smooth;
 
 body{
 background-color: var(--bg);
+overflow: hidden;
   color: var(--text);
 }
 
@@ -121,6 +122,7 @@ STRONA OGULNE – CSS / NAWIGACJA MENU z x ponizej 768 (telefony tablety)
 ========================================== */
 .X-menu{   
   background-color:rgba(235, 235, 235, 0.82);
+  backdrop-filter: blur(10px);
   color: var(--text);
 }
 body.dark-theme .X-menu{
@@ -760,7 +762,7 @@ padding-left: 5vw;
 text-shadow: 0 8px 24px rgba(0, 0, 0, 0.35);
 font-family: "Yeseva One", serif;
 font-weight: 400;
-color: #4b4b4b;
+color: #979797;
 font-style: normal;
 padding-bottom: 10%;
 }
@@ -1204,29 +1206,56 @@ padding: 2rem;
 /* ============================================================================================================================
 COOKIE 1 – CSS
 ============================================================================================================================ */
+#cookie-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+background: rgba(0, 0, 0, 0.544);
+  z-index: 9998; /* O jeden mniej niż baner */
+  display: block;
+}
+
 #cookie-banner {
 position: fixed;
 bottom: 0;
 left: 0;
 width: 100%;
 height: 20vh;
-background: #00000095;
-color: #bae047;
+background: rgba(255, 255, 255, 0.544); backdrop-filter: blur(10px);
+
+color: #2b2b2b;
 padding: 20px;
+font-weight: 700;
 display: flex;
 justify-content: space-between;
 align-items: center;
 z-index: 9999;
 }
-
+@media (max-width: 768px) {
+#cookie-banner {
+gap: 2%;
+width: 100%;
+height: 60vh;
+padding: 20px;
+flex-direction: column;
+justify-content:flex-start
+}
+}
 
 /* ==========================================
 COOKIE - CSS INFORMACJIA cookie
 ========================================== */
 .p-coo{
-font-size: 50%;
+font-size: 80%;
 }
-
+@media (max-width: 768px) {
+.p-coo{
+font-size: 90%;
+margin-bottom: 7rem;
+}
+}
 
 /* ==========================================
 COOKIE - CSS PRZYCISKI
@@ -1243,11 +1272,17 @@ PRZYCISKI accept
 width: 20dvw;
 padding: 1%;
 background-color:#000000c7;
-border-radius: 0.75rem;
+border-radius: 0.30rem;
 color: white;
 border: solid 1px #ffffff;
 font-weight: 750;
 transition: background-color 0.3s ease, color 0.3s ease;
+}
+@media (max-width: 768px) {
+.accept{
+width: 90dvw;
+height: 7svh;
+}
 }
 .accept:hover{
 color: #9cc328;
@@ -1262,17 +1297,22 @@ PRZYCISKI delete
 width: 20vw;
 font-weight: 750;
 padding: 1%;
-background-color:#000000c7;
-border-radius: 0.75rem;
+background-color:#ffffffc7;
+border-radius: 0.30rem;
 border: solid 1px #ff0000;
 transition: background-color 0.3s ease, color 0.3s ease;
+color: red;
+}
+@media (max-width: 768px) {
+.delete{
+width: 90dvw;
+height: 7svh;
+}
 }
 .delete:hover{
-background-color: rgba(170, 0, 0, 0.161);
+background-color: rgba(170, 0, 0, 0.389);
 color: white;
-border-radius: 0.75rem;
 }
-
 
 
 
@@ -1707,7 +1747,7 @@ justify-content: space-between;
   --nav-bg: rgb(255, 255, 255);
   --card-bg: #ffffff;
   --modal-bg: #ffffff;
-  --x-menu:  rgba(235, 235, 235, 0.82);
+  --x-menu: rgba(255, 255, 255, 0.544);
   --oliwka:  #6B705C;
 }
 
@@ -1725,3 +1765,106 @@ body.dark-theme {
   --oliwka:  #7b8264;
 }
 
+#loader{
+  position: fixed;
+  inset: 0;
+  background: #ffffff;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 99999;
+  transition: opacity 0.8s ease; 
+}
+#loader.fade-out{
+  opacity: 0;
+  pointer-events: none;
+}
+
+#loader.hidden {
+  display: none;
+}
+.spinner{
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border: 5px solid #7e7e7e;
+  border-top: 5px solid #9cc328;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin-bottom: 1rem;
+}
+.ring-dwa{
+  width: 50px;
+  height: 50px;
+  border: 4px solid #7e7e7e;
+  border-top: 4px solid #9cc328;
+  animation: spin 2s linear infinite reverse; 
+}
+.ring-trzy{
+  width: 70px;
+  height: 70px;
+  border: 3px solid #7e7e7e;
+  border-top: 3px solid #9cc328;
+  animation: spin 3s linear infinite; 
+}
+@keyframes spin{
+  to{ transform: rotate(360deg); }
+}
+
+#content{
+  visibility: hidden;
+}
+
+
+.prh1{
+text-align: left!important;
+max-width: 88ch;
+margin-top: 6rem;
+color: #000000;
+width: 100%;
+font-size: large;
+background-color: transparent;
+
+}
+.prh2{
+color: #282828;
+line-height: 4rem;
+text-align: left;
+font-size: medium;
+background-color: transparent;
+}
+.p-pp{
+color: #4b4b4b;
+line-height: 2rem;
+text-align: left;
+font-size: medium;
+background-color: transparent;
+}
+
+.main2{ 
+padding: 8%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.body2{
+  overflow: scroll;
+}
+.powrot{
+  list-style: none;
+  position: fixed;
+  color: #000000;
+}
+.a2{
+  text-decoration: none;
+  color: #000000;
+  list-style: none;
+  font-size: 2rem;
+  text-decoration: none;
+  list-style: none;
+}
+.a1{
+  list-style: none;
+  text-decoration: none;
+  list-style: none;
+}
